src/test/testData/kubernetes/KUBE004/pod.yaml.denied
apiVersion: v1
kind: Pod
metadata:
  name: audit-pod
  labels:
    app: audit-pod
spec:
  containers:
  - name: test-container
    image: hashicorp/http-echo:0.2.3
    securityContext:
      allowPrivilegeEscalation: <error descr="Using privileged containers could lead to privilege escalation.">true</error>
      privileged: <error descr="Using privileged containers could lead to privilege escalation.">true</error>